# Productivity-Tool

./: Cargo.toml  credits.txt
client/: Cargo.toml
client/src/: app.rs  app_color.rs  backend.rs  button.rs  home.rs  lib.rs  main.rs  navbar.rs  utility.rs
client/src/todo/: component.rs  lib.rs
client/src/todo_entry/: component.rs  lib.rs  mod.rs
common/: Cargo.toml
common/src/: todo_item.rs
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  color.rs  home.rs  list_item.rs  main.rs  navbar.rs  page.rs  utility.rs
src/todo/: component.rs  lib.rs  mod.rs
