[package]
name = "productivity_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.2.4", features = ["web"] }
dioxus-logger = "0.3.0"
sir = { version = "0.2.2", features = ["dioxus"] }
stylist = { version = "0.11", features = ["parser"] }
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "js"] }
log = "0.4"
serde = {version = "1.0.152", features = ["derive"] }